updates and stuff

--- a/index.html
+++ b/index.html
@@ -295,6 +295,7 @@
         {lat: 51.2943016, lng: -3.009639, name: "Northam Farm"},
         {lat: 51.2432901, lng: -2.9260389, name: "Willow Tree Farm"},
         {lat: 51.1792451, lng: -2.7367576, name: "The Horeless Bar"},
+        {lat: 51.1236839, lng: -2.7614884, name: "New Beginnings Bar"},
       ];
 
       function initGoogleMap(){
