--- a/index.html
+++ b/index.html
@@ -296,6 +296,7 @@
         {lat: 51.2432901, lng: -2.9260389, name: "Willow Tree Farm"},
         {lat: 51.1792451, lng: -2.7367576, name: "The Horeless Bar"},
         {lat: 51.1236839, lng: -2.7614884, name: "New Beginnings Bar"},
+        {lat: 51.02143, lng: -3.1553113, name: "The Gin & Sin Co"},
       ];
 
       function initGoogleMap(){
@@ -303,7 +304,7 @@
         const infowindow = new google.maps.InfoWindow(); // Only one InfoWindow
         const map = new google.maps.Map(document.getElementById('map'), {
             zoom: 10,
-            center: new google.maps.LatLng(51.35, -2.97)
+            center: new google.maps.LatLng(51.165222,-2.909575)
         });
         
         function placeMarker( loc ) {
