--- a/index.html
+++ b/index.html
@@ -149,13 +149,16 @@
 
             <div class="col-lg-6 original">
               <img class="seven-hundred-ml-image" alt="70cl bottle of Dimpsey Somerset Gin" src="./images/bottle.png" />
-              <img class="taste-of-the-west-gold" alt="Taste of the West Gold 2022" src="./images/TOTW_Gold_2022.png" />
-              <a href="original.html"><button type="button" class="btn">Buy</button></a>
+              <div class="more-info-button">
+                <a href="original.html"><button type="button" class="btn">Original</button></a>
+              </div>
             </div><!-- /.col-lg-6 original -->
 
             <div class="col-lg-6 gurt-blush">
               <img class="seven-hundred-ml-image" alt="70cl bottle of Dimpsey Somerset Gin" src="./images/gurt_blush.png" />
-              <a href="gurt-blush.html"><button type="button" class="btn">Buy</button></a>
+              <div class="more-info-button">
+                <a href="gurt-blush.html"><button type="button" class="btn">Gurt Blush</button></a>
+              </div>
             </div><!-- /.gurt-blush -->
 
             <!-- <div class="col-lg-4 miniatures">
