--- a/gurt-blush.html
+++ b/gurt-blush.html
@@ -123,6 +123,10 @@
 
     <main>
 
+        <div class="banner-image">
+          <img class="img-fluid" alt="Dimpsey Somerset Gin" src="./images/gurt-blush-main.jpg" />
+        </div>
+
         <hr class="featurette-divider">
 
         <div class="container marketing">
@@ -763,7 +767,9 @@
           <div class="col-lg-12 youMayAlsoLike">
 
             <img class="seven-hundred-ml-image gurt-blush" alt="70cl bottle of Dimpsey Somerset Gin" src="./images/bottle.png" />
-            <a href="original.html"><button type="button" class="btn">Buy</button></a>
+            <div class="more-info-button">
+              <a href="original.html"><button type="button" class="btn">Original</button></a>
+            </div>
 
           </div><!-- /.col-lg-6 youMayAlsoLike -->
 
