--- a/original.html
+++ b/original.html
@@ -123,6 +123,10 @@
 
     <main>
 
+        <div class="banner-image">
+          <img class="img-fluid" alt="Dimpsey Somerset Gin" src="./images/original-main.jpg" />
+        </div>
+
         <hr class="featurette-divider">
 
         <div class="container marketing">
@@ -760,6 +764,10 @@
 
           <div class="col-lg-6 drink-one">
 
+            <div class="cocktail-image">
+              <img class="img-fluid" alt="Dimpsey Negroni Cocktail" src="./images/original-negroni.jpg" />
+            </div>
+
             <h2 class="featurette-heading">Martini</h2>
             <p class="lead">Ingredients</p>
             <ul>
@@ -780,6 +788,9 @@
 
           <div class="col-lg-6 drink-two">
 
+            <div class="cocktail-image">
+              <img class="img-fluid" alt="Dimpsey Sour Cocktail" src="./images/original-sour.jpg" />
+            </div>
             <h2 class="featurette-heading">Dimpsey Sour</h2>
             <p class="lead">Ingredients</p>
             <ul>
@@ -811,7 +822,9 @@
           <div class="col-lg-12 youMayAlsoLike">
 
             <img class="seven-hundred-ml-image gurt-blush" alt="70cl bottle of Dimpsey Somerset Gin" src="./images/gurt_blush.png" />
-            <a href="gurt-blush.html"><button type="button" class="btn">Buy</button></a>
+            <div class="more-info-button">
+              <a href="gurt-blush.html"><button type="button" class="btn">Gurt Blush</button></a>
+            </div>
 
           </div><!-- /.col-lg-6 distillery-description -->
 
