og images for link previews

--- a/original.html
+++ b/original.html
@@ -7,6 +7,12 @@
     <meta name="author" content="Tommy">
     <title>Dimpsey Somerset Gin - Original</title>
     <link rel="canonical" href="https://dimpseygin.co.uk/original.html" />
+
+    <meta property="og:title" content="Dimpsey Somerset Gin Original" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://dimpseygin.co.uk" />
+    <meta property="og:image" content="https://dimpseygin.co.uk/images/original_big.png" />
+    <meta property="og:description" content="Dimpsey Somerset Gin is hand-crafted with traditional copper pot stills at Dimpsey (that's old Somerset for the light before dusk), at the foot of the Mendip Hills, using locally sourced botanicals and Cheddar spring water." />
     
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
