og meta url update

--- a/gurt-blush.html
+++ b/gurt-blush.html
@@ -10,7 +10,7 @@
 
     <meta property="og:title" content="Dimpsey Somerset Gin Gurt Blush" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://dimpseygin.co.uk" />
+    <meta property="og:url" content="https://dimpseygin.co.uk/gurt-blush.html" />
     <meta property="og:image" content="https://dimpseygin.co.uk/images/gurt_blush_big.png" />
     <meta property="og:description" content="Dimpsey Somerset Gin is hand-crafted with traditional copper pot stills at Dimpsey (that's old Somerset for the light before dusk), at the foot of the Mendip Hills, using locally sourced botanicals and Cheddar spring water." />
     
