make images responsive

--- a/index.html
+++ b/index.html
@@ -148,14 +148,14 @@
           <div class="row">
 
             <div class="col-lg-6 original">
-              <img class="seven-hundred-ml-image" alt="70cl bottle of Dimpsey Somerset Gin" src="./images/bottle.png" />
+              <img class="img-fluid seven-hundred-ml-image" alt="70cl bottle of Dimpsey Somerset Gin" src="./images/bottle.png" />
               <div class="more-info-button">
                 <a href="original.html"><button type="button" class="btn">Original</button></a>
               </div>
             </div><!-- /.col-lg-6 original -->
 
             <div class="col-lg-6 gurt-blush">
-              <img class="seven-hundred-ml-image" alt="70cl bottle of Dimpsey Somerset Gin" src="./images/gurt_blush.png" />
+              <img class="img-fluid seven-hundred-ml-image" alt="70cl bottle of Dimpsey Somerset Gin" src="./images/gurt_blush.png" />
               <div class="more-info-button">
                 <a href="gurt-blush.html"><button type="button" class="btn">Gurt Blush</button></a>
               </div>
