--- a/original.html
+++ b/original.html
@@ -140,7 +140,7 @@
           <div class="row">
 
             <div class="col-lg-6 original">
-              <img class="seven-hundred-ml-image" alt="70cl bottle of Dimpsey Somerset Gin" src="./images/bottle.png" />
+              <img class="img-fluid seven-hundred-ml-image" alt="70cl bottle of Dimpsey Somerset Gin" src="./images/bottle.png" />
             </div><!-- /.col-lg-6 main-image -->
 
             <div class="col-lg-6 description">
@@ -827,7 +827,7 @@
           <h2 class="featurette-heading">You may also like</h2>
           <div class="col-lg-12 youMayAlsoLike">
 
-            <img class="seven-hundred-ml-image gurt-blush" alt="70cl bottle of Dimpsey Somerset Gin" src="./images/gurt_blush.png" />
+            <img class="img-fluid seven-hundred-ml-image gurt-blush" alt="70cl bottle of Dimpsey Somerset Gin" src="./images/gurt_blush.png" />
             <div class="more-info-button">
               <a href="gurt-blush.html"><button type="button" class="btn">Gurt Blush</button></a>
             </div>
