--- a/original.html
+++ b/original.html
@@ -774,20 +774,20 @@
               <img class="img-fluid" alt="Dimpsey Negroni Cocktail" src="./images/original-negroni.jpg" />
             </div>
 
-            <h2 class="featurette-heading">Martini</h2>
+            <h2 class="featurette-heading">Negroni</h2>
             <p class="lead">Ingredients</p>
             <ul>
-              <li>50ml Dimpsey Somerset Gin Original</li>
-              <li>10ml dry vermouth</li>
-              <li>2 dashes of aromatic bitters</li>
-              <li>Fresh lemon zest</li>
+              <li>30ml Dimpsey Somerset Gin Original</li>
+              <li>30ml Dry Vermouth</li>
+              <li>30ml Campari</li>
+              <li>Fresh orange peel</li>
             </ul>
 
             <p class="lead">Instructions</p>
             <ul>
-              <li>Add gin and vermouth to a mixing glass filled with ice</li>
-              <li>Stir well and strain into a martini glass</li>
-              <li>Add the Grapefuit bitters and finish with lemon zest</li>
+              <li>Mix all ingredients into a mixing glass. Fill to the brim with ice and stir until smooth to taste.</li>
+              <li>Pour over a large block of ice. </li>
+              <li>Garnish with an orange wedge, or even better, squeeze a rind peel over the drink then add the twist for the full orange flavour.</li>
             </ul>
 
           </div><!-- /.col-lg-6 main-image -->
