Fork n Ale on the map

--- a/index.html
+++ b/index.html
@@ -294,6 +294,7 @@
       const locations = [
         {lat: 51.3505567, lng: -2.979792, name: "The Food Den"},
         {lat: 51.3503871, lng: -2.9808171, name: "The Vaults"},
+        {lat: 51.3463959, lng: -2.9763845, name: "Fork 'n' Ale"},
         {lat: 51.2767586, lng: -2.9320063, name: "Brent House Farm Shop"},
         {lat: 51.2889864, lng: -2.8398912, name: "The White Hart"},
         {lat: 51.2943016, lng: -3.009639, name: "Northam Farm"},
