--- a/index.html
+++ b/index.html
@@ -153,14 +153,14 @@
             <div class="col-lg-6 original">
               <img class="img-fluid seven-hundred-ml-image" alt="70cl bottle of Dimpsey Somerset Gin" src="./images/bottle.png" />
               <div class="more-info-button">
-                <a href="original.html"><button type="button" class="btn">Original (from £26)</button></a>
+                <a href="https://shop.stillshed.co.uk/product/dimpsey-somerset-gin-original/"><button type="button" class="btn">Original (from £26)</button></a>
               </div>
             </div><!-- /.col-lg-6 original -->
 
             <div class="col-lg-6 gurt-blush">
               <img class="img-fluid seven-hundred-ml-image" alt="70cl bottle of Dimpsey Somerset Gin" src="./images/gurt_blush.png" />
               <div class="more-info-button">
-                <a href="gurt-blush.html"><button type="button" class="btn">Gurt Blush (from £26)</button></a>
+                <a href="https://shop.stillshed.co.uk/product/dimpsey-somerset-gin-gurt-blush/"><button type="button" class="btn">Gurt Blush (from £26)</button></a>
               </div>
             </div><!-- /.gurt-blush -->
 
