updating instagram feed

--- a/index.html
+++ b/index.html
@@ -219,7 +219,8 @@
 
             <h2 class="featurette-heading">Follow us <a href="https://facebook.com/dimpseygin" target="_blank"><i class="fa-brands fa-facebook-f"></i></a> | <a href="https://instagram.com/dimpseygin" target="_blank"><i class="fa-brands fa-instagram"></i></a></h2>
 
-            <div class="embedsocial-hashtag" data-ref="3eb3cb85551748d3b122140f5dc4a386087db845"><a class="feed-powered-by-es feed-powered-by-es-slider" href="https://embedsocial.com/social-media-aggregator/" target="_blank" title="Widget by EmbedSocial">Widget by EmbedSocial<span>→</span></a></div><script>(function(d, s, id){var js; if (d.getElementById(id)) {return;} js = d.createElement(s); js.id = id; js.src = "https://embedsocial.com/cdn/ht.js"; d.getElementsByTagName("head")[0].appendChild(js);}(document, "script", "EmbedSocialHashtagScript"));</script>
+            <script src="https://apps.elfsight.com/p/platform.js" defer></script>
+            <div class="elfsight-app-9be776f1-7f62-401c-9261-09a2c8bd3147"></div>
             
           </div><!-- /.col-lg-6 follow-us-description -->
             
